--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "watch:css": "onchange \"src/main/resources/static/css/**/*.css\" -- npm run build:css",
     "watch:js": "onchange \"src/main/resources/static/js/**/*.js\" -- npm run build:js",
     "watch:svg": "onchange \"src/main/resources/static/svg/**/*.svg\" -- npm run build:svg",
-    "watch:serve": "browser-sync start --no-inject-changes --proxy localhost:8080 --files \"target/classes/templates\" \"target/classes/static\""
+    "watch:serve": "browser-sync start --no-inject-changes --proxy localhost:8080 --files \"target/classes/templates\" \"target/classes/static\"",
+    "dev": "npm run build && npm run watch"
   },
   "devDependencies": {
     "@babel/cli": "^7.23.4",
